<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3772E7"
    android:orientation="vertical"
    android:padding="@dimen/radius_and_margin_top">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text = "@string/playlist_maker"
        android:textColor="@color/white_1"
        android:layout_marginTop="-2dp"
        android:textSize="@dimen/primary_text_size" />


    <Button
        android:id = "@+id/search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:backgroundTint="@color/white_1"
        android:layout_marginTop="40dp"
        app:cornerRadius="@dimen/radius_and_margin_top"
        android:text="@string/search"
        android:textColor="@color/black_1"
        app:icon = "@drawable/ic_vector3"
        app:iconGravity="textStart"
        android:textAllCaps="false"
        android:textSize="@dimen/primary_text_size"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black_1"
        />
    <Button
        android:id = "@+id/media"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:backgroundTint="@color/white_1"
        android:layout_marginTop="@dimen/radius_and_margin_top"
        app:cornerRadius="@dimen/radius_and_margin_top"
        android:text="@string/media"
        android:textColor="@color/black_1"
        app:icon = "@drawable/ic_vector2"
        app:iconGravity="textStart"
        android:textAllCaps="false"
        android:textSize="@dimen/primary_text_size"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black_1"/>
    <Button
        android:id = "@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:backgroundTint="@color/white_1"
        android:layout_marginTop="@dimen/radius_and_margin_top"
        app:cornerRadius="@dimen/radius_and_margin_top"
        android:text="@string/settings"
        android:textColor="@color/black_1"
        android:layout_marginBottom="12dp"
        app:icon = "@drawable/ic_vector"
        app:iconGravity="textStart"
        android:textSize="@dimen/primary_text_size"
        app:iconPadding="@dimen/icon_padding"
        android:textAllCaps="false"
        app:iconTint="@color/black_1"/>
</LinearLayout>
