<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_2"
    android:orientation="vertical"
    android:paddingLeft="@dimen/radius_and_margin_top"
    android:paddingRight = "@dimen/paddingRight"
    android:paddingTop="@dimen/paddingTop">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id = "@+id/returnButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart = "4dp"
            android:src="@drawable/back"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text = "@string/settings"
            android:layout_marginTop="-2dp"
            android:layout_marginStart="28dp"
            android:textStyle="bold"
            android:textColor="@color/black_1"
            android:textSize="@dimen/primary_text_size" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/for_text"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:gravity="center">
        <Switch

            android:paddingVertical = "21dp"
            android:paddingEnd = "2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/primary_text_size_16sp"
            android:textColor="@color/black_2"
            android:text="@string/dark_article"
            />
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="@dimen/primary_text_size_16sp"
        android:textColor="@color/black_2"
        android:layout_marginVertical="21dp"
        android:text="@string/share"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/share"
        app:iconPadding="@dimen/icon_padding"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginVertical="21dp"
            android:textSize="@dimen/primary_text_size_16sp"
            android:textColor="@color/black_2"
            android:text="@string/support"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/support"
            app:iconPadding="@dimen/icon_padding"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginVertical="21dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/primary_text_size_16sp"
            android:textColor="@color/black_2"
            android:text="@string/user"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user"
            app:iconPadding="@dimen/icon_padding"
            />
    </LinearLayout>
    </LinearLayout>